# deno_notify

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  deno.jsonc  run_tests.sh
.github/workflows/: build.yml
src/: lib.rs
tests/: _open_plugin.ts  basic.test.ts  options.test.ts  platforms.test.ts  test.ts
ts/: deps.ts  mod.ts  notification.ts  plugin.ts  prepared.ts
