[package]
name = "deno_notify"
version = "1.1.2"
authors = ["Pandawan <pandawanfr@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.19"
deno_core = "0.113.0"
notify-rust = "4.5.5"
serde = "1.0.133"
