[package]
name = "deno_notify"
version = "1.2.0"
authors = ["Pandawan <pandawanfr@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.21"
deno_core = "0.124.0"
notify-rust = "4.5.6"
serde = "1.0.136"
