[package]
name = "deno_notify"
version = "1.4.2"
authors = ["Pandawan <pandawanfr@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.25"
deno_core = "0.168.0"
notify-rust = "4.7.0"
serde = "1.0.149"
